infrastructure/airbyte/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airbyte-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-campus
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
spec:
  tls:
    - hosts:
        - airbyte.campus.clusterdiali.me
      secretName: airbyte.campus.clusterdiali.me-tls
  rules:
    - host: airbyte.campus.clusterdiali.me
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: airbyte-webapp-svc
                port:
                  number: 80
